--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,10 @@
         {
             "name": "Ticketmatic",
             "email": "developers@ticketmatic.com"
+        },
+        {
+            "name": "Christian Ries",
+            "email": "lonaas1337@gmail.com"
         }
     ],
     "require": {},
